tests/ui/macros/semicolon-in-expressions-from-macros/warn-semicolon-in-expressions-from-macros.stderr
error: macro expansion ignores `;` and any tokens following
  --> $DIR/warn-semicolon-in-expressions-from-macros.rs:5:13
   |
LL |         true;
   |             ^
...
LL |         _ => foo!()
   |              ------ caused by the macro expansion here
   |
   = note: the usage of `foo!` is likely invalid in expression context
help: you might be missing a semicolon here
   |
LL |         _ => foo!();
   |                    +

error: aborting due to 1 previous error

